# pytorch-diag

./: .gitignore  LICENSE  README.md  pyproject.toml
src/torch_diag/: __init__.py
